Extract BlockManager and runtime lifecycle into common
Introduce platform ports (BlockVisualRenderer, IgnisCustomItemFactory,
ResourcePackHost, IgnisPlatformIntegration) and extend PlatformAdapter
with resolveWorld, createMaterialItem, and clearBlock.

Move BlockManager, placed-block persistence, BlockInteractionResolver,
ExtensionSupportService, IgnisCoreFacadeImpl, and IgnisRuntimeLifecycle
into common. Spigot and Sponge modules now bind thin adapters only;
IgnisCoreApplication delegates enable/disable to shared lifecycle.

Co-authored-by: Rono <rowan-smith@users.noreply.github.com>